sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  for (i<- 1 to n){
  	var ecart: Int=getNombreValeur()/2
  	var l: Int=i
    var v: Int=getValeur(i)
    while (ecart>0){
    for (j<- i-ecart to 0 by -ecart){
          if (!plusPetitQue(j,v)){
        			copie(j,j+1)
        			l=j
      }
    }
    setValeur(l,v)
  }
  
}
}